# az-reader

./: .gitignore  AGENTS.md  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
az_reader/: __init__.py
ops/: pyproject.toml
ops/ops/: __init__.py  _deploy_common.py  _utils.py  build_and_push.py  build_and_push_reader.py  deploy_bootstrap.py  deploy_workload.py  manage_tokens.py
scripts/: prepare-licensed-assets.ts
src/api/: crawler.ts  searcher.ts  serp.ts
src/cloud-functions/: adaptive-crawler.ts  data-crunching.ts
src/dto/: jina-embeddings-auth.ts
src/services/: misc.ts  puppeteer.ts  serper-search.ts  snapshot-formatter.ts
src/services/serp/: google.ts  puppeteer.ts
src/shared/: enforce-auth.ts  index.ts  register-searcher.ts
src/shared/db/: api-roll.ts  jina-embeddings-token-account.ts  rate-limit-counter.ts
src/shared/dto/: jina-embeddings-auth.ts
src/shared/lib/: cosmos.ts  errors.ts  firestore.ts
src/shared/services/: async-context.ts  azure-config.ts  blob-storage.ts  common-iminterrogate.ts  common-llm.ts  firebase-functions.ts  firebase-storage-bucket.ts  proxy-provider.ts  rate-limit.ts  secrets.ts
src/shared/utils/: audition.ts  openai.ts
thinapps-shared/: package.json  tsconfig.json
thinapps-shared/src/: enforce-auth.ts  index.ts  register-searcher.ts
thinapps-shared/src/db/: api-roll.ts  jina-embeddings-token-account.ts  rate-limit-counter.ts
thinapps-shared/src/dto/: jina-embeddings-auth.ts
thinapps-shared/src/lib/: cosmos.ts  errors.ts  firestore.ts
thinapps-shared/src/services/: secrets.ts  (+10 more)
(+26 files in other folders)
